HelloUltraviolet/Fixtures/RejectedSource/Attributes/ReservedVendorNamespace/Expected.uv
//! Expected diagnostic metadata for the ReservedVendorNamespace rejected-source specimen.

expectedDiagnostic("E-CNF-0402", "diagnostics.VendorAttributeDiagnostics")
